techdebt:[CDS-78065]: Added tests for ExecutionDetailsResource.java (#52264)
* techdebt:[CDS-78065]: Added tests to improve test coverage for ExecutionDetailsResource.java