@@ -12,6 +12,7 @@ import static io.harness.rule.OwnerRule.DEVESH;
 import static io.harness.rule.OwnerRule.NAMAN;
 import static io.harness.rule.OwnerRule.PRASHANTSHARMA;
 import static io.harness.rule.OwnerRule.SAMARTH;
+import static io.harness.rule.OwnerRule.SANDESH_SALUNKHE;
 import static io.harness.rule.OwnerRule.VIVEK_DIXIT;
 
 import static junit.framework.TestCase.assertEquals;
@@ -20,9 +21,12 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import io.harness.CategoryTest;
 import io.harness.accesscontrol.clients.AccessControlClient;
@@ -38,16 +42,25 @@ import io.harness.ng.core.dto.ResponseDTO;
 import io.harness.pms.execution.ExecutionStatus;
 import io.harness.pms.execution.utils.StatusUtils;
 import io.harness.pms.gitsync.PmsGitSyncHelper;
+import io.harness.pms.ngpipeline.inputset.beans.resource.InputSetYamlWithTemplateDTO;
 import io.harness.pms.pipeline.PMSPipelineListBranchesResponse;
 import io.harness.pms.pipeline.PMSPipelineListRepoResponse;
 import io.harness.pms.pipeline.PipelineEntity;
 import io.harness.pms.pipeline.PipelineExecutionNotesDTO;
+import io.harness.pms.pipeline.ResolveInputYamlType;
+import io.harness.pms.pipeline.mappers.PipelineExecutionSummaryDtoMapper;
 import io.harness.pms.pipeline.service.PMSPipelineService;
 import io.harness.pms.plan.execution.beans.PipelineExecutionSummaryEntity;
 import io.harness.pms.plan.execution.beans.PipelineExecutionSummaryEntity.PlanExecutionSummaryKeys;
+import io.harness.pms.plan.execution.beans.dto.ExecutionDataResponseDTO;
+import io.harness.pms.plan.execution.beans.dto.ExecutionMetaDataResponseDetailsDTO;
+import io.harness.pms.plan.execution.beans.dto.ExpressionEvaluationDetailDTO;
+import io.harness.pms.plan.execution.beans.dto.NodeExecutionSubGraphResponse;
 import io.harness.pms.plan.execution.beans.dto.PipelineExecutionDetailDTO;
 import io.harness.pms.plan.execution.beans.dto.PipelineExecutionIdentifierSummaryDTO;
 import io.harness.pms.plan.execution.beans.dto.PipelineExecutionSummaryDTO;
+import io.harness.pms.plan.execution.service.ExecutionGraphService;
+import io.harness.pms.plan.execution.service.ExpressionEvaluatorService;
 import io.harness.pms.plan.execution.service.PMSExecutionService;
 import io.harness.pms.plan.execution.service.PmsExecutionSummaryService;
 import io.harness.rule.Owner;
@@ -81,15 +94,22 @@ public class ExecutionDetailsResourceTest extends CategoryTest {
   @Mock PmsGitSyncHelper pmsGitSyncHelper;
   @Mock PlanExecutionMetadataService planExecutionMetadataService;
   @Mock PmsExecutionSummaryService pmsExecutionSummaryService;
+  @Mock ExecutionHelper executionHelper;
+  @Mock ExecutionGraphService executionGraphService;
+  @Mock ExpressionEvaluatorService expressionEvaluatorService;
 
   private final String ACCOUNT_ID = "account_id";
   private final String ORG_IDENTIFIER = "orgId";
   private final String PROJ_IDENTIFIER = "projId";
   private final String PIPELINE_IDENTIFIER = "basichttpFail";
 
-  private final List<String> PIPELINE_IDENTIFIER_LIST = Arrays.asList(PIPELINE_IDENTIFIER);
+  private final List<String> PIPELINE_IDENTIFIER_LIST = List.of(PIPELINE_IDENTIFIER);
   private final String PLAN_EXECUTION_ID = "planId";
   private final String STAGE_NODE_ID = "stageNodeId";
+  private final String CHILD_STAGE_NODE_ID = "childStageNodeId";
+  private final Boolean RENDER_FULL_BOTTOM_GRAPH = true;
+  private final String NODE_EXECUTION_ID = "nodeExecutionId";
+  private final String YAML = "yamlContent";
 
   PipelineEntity entity;
   PipelineEntity entityWithVersion;
@@ -184,37 +204,7 @@ public class ExecutionDetailsResourceTest extends CategoryTest {
     PipelineExecutionSummaryDTO responseDTO = content.toList().get(0);
     assertThat(responseDTO.getPipelineIdentifier()).isEqualTo(PIPELINE_IDENTIFIER);
     assertThat(responseDTO.getPlanExecutionId()).isEqualTo(PLAN_EXECUTION_ID);
-    assertThat(responseDTO.getRunSequence()).isEqualTo(0);
-  }
-
-  @Test
-  @Owner(developers = PRASHANTSHARMA)
-  @Category(UnitTests.class)
-  public void testExecutionIdAndStatus() {
-    Pageable pageable = PageRequest.of(0, 10, Sort.by(Direction.DESC, PlanExecutionSummaryKeys.startTs));
-    Page<PipelineExecutionSummaryEntity> pipelineExecutionSummaryEntities =
-        new PageImpl<>(Collections.singletonList(executionSummaryEntity), pageable, 1);
-
-    Criteria criteria = Criteria.where("a").is("b");
-    doReturn(criteria)
-        .when(pmsExecutionService)
-        .formCriteria(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, null, null, null, null,
-            ExecutionStatus.getListExecutionStatus(StatusUtils.finalStatuses()), false, false, true);
-
-    List<String> projections =
-        Arrays.asList(PlanExecutionSummaryKeys.planExecutionId, PlanExecutionSummaryKeys.runSequence,
-            PlanExecutionSummaryKeys.orgIdentifier, PlanExecutionSummaryKeys.pipelineIdentifier,
-            PlanExecutionSummaryKeys.projectIdentifier, PlanExecutionSummaryKeys.status);
-
-    doReturn(pipelineExecutionSummaryEntities)
-        .when(pmsExecutionService)
-        .getPipelineExecutionSummaryEntityWithProjection(criteria, pageable, projections);
-
-    Page<PipelineExecutionIdentifierSummaryDTO> content =
-        executionDetailsResource
-            .getListOfExecutionIdentifier(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, 0, 10, null)
-            .getData();
-    assertThat(content).isNotEmpty();
+    assertThat(responseDTO.getRunSequence()).isZero();
   }
 
   @Test
@@ -248,7 +238,181 @@ public class ExecutionDetailsResourceTest extends CategoryTest {
     PipelineExecutionSummaryDTO responseDTO = content.toList().get(0);
     assertThat(responseDTO.getPipelineIdentifier()).isEqualTo(PIPELINE_IDENTIFIER);
     assertThat(responseDTO.getPlanExecutionId()).isEqualTo(PLAN_EXECUTION_ID);
-    assertThat(responseDTO.getRunSequence()).isEqualTo(0);
+    assertThat(responseDTO.getRunSequence()).isZero();
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsInvalidPage() {
+    try {
+      executionDetailsResource
+          .getListOfExecutions(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, null, null, -1, 10, null, null, null, null,
+              null, false, GitEntityFindInfoDTO.builder().build())
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsInvalidSizeEQ0() {
+    try {
+      executionDetailsResource
+          .getListOfExecutions(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, null, null, 0, 0, null, null, null, null,
+              null, false, GitEntityFindInfoDTO.builder().build())
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsInvalidSizeGT1000() {
+    try {
+      executionDetailsResource
+          .getListOfExecutions(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, null, null, 0, 1001, null, null, null, null,
+              null, false, GitEntityFindInfoDTO.builder().build())
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsEmptyList() {
+    Pageable pageable = PageRequest.of(0, 10, Sort.by(Direction.DESC, PlanExecutionSummaryKeys.startTs));
+    Page<PipelineExecutionSummaryEntity> pipelineExecutionSummaryEntities =
+        new PageImpl<>(Collections.emptyList(), pageable, 0);
+    doReturn(pipelineExecutionSummaryEntities)
+        .when(pmsExecutionService)
+        .getPipelineExecutionSummaryEntity(any(), any());
+    doReturn(Optional.of(PipelineEntity.builder().build()))
+        .when(pmsPipelineService)
+        .getAndValidatePipeline(anyString(), anyString(), anyString(), anyString(), anyBoolean());
+
+    doReturn(null).when(pmsGitSyncHelper).getGitSyncBranchContextBytesThreadLocal();
+
+    Page<PipelineExecutionSummaryDTO> content =
+        executionDetailsResource
+            .getListOfExecutions(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, null, null, 0, 10, null, null, null, null,
+                null, false, GitEntityFindInfoDTO.builder().build())
+            .getData();
+    assertThat(content).isEmpty();
+    assertThat(content.getNumberOfElements()).isZero();
+  }
+
+  @Test
+  @Owner(developers = PRASHANTSHARMA)
+  @Category(UnitTests.class)
+  public void testExecutionIdAndStatus() {
+    Pageable pageable = PageRequest.of(0, 10, Sort.by(Direction.DESC, PlanExecutionSummaryKeys.startTs));
+    Page<PipelineExecutionSummaryEntity> pipelineExecutionSummaryEntities =
+        new PageImpl<>(Collections.singletonList(executionSummaryEntity), pageable, 1);
+
+    Criteria criteria = Criteria.where("a").is("b");
+    doReturn(criteria)
+        .when(pmsExecutionService)
+        .formCriteria(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, null, null, null, null,
+            ExecutionStatus.getListExecutionStatus(StatusUtils.finalStatuses()), false, false, true);
+
+    List<String> projections =
+        Arrays.asList(PlanExecutionSummaryKeys.planExecutionId, PlanExecutionSummaryKeys.runSequence,
+            PlanExecutionSummaryKeys.orgIdentifier, PlanExecutionSummaryKeys.pipelineIdentifier,
+            PlanExecutionSummaryKeys.projectIdentifier, PlanExecutionSummaryKeys.status);
+
+    doReturn(pipelineExecutionSummaryEntities)
+        .when(pmsExecutionService)
+        .getPipelineExecutionSummaryEntityWithProjection(criteria, pageable, projections);
+
+    Page<PipelineExecutionIdentifierSummaryDTO> content =
+        executionDetailsResource
+            .getListOfExecutionIdentifier(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, 0, 10, null)
+            .getData();
+    assertThat(content).isNotEmpty();
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testExecutionIdAndStatusInvalidPage() {
+    try {
+      executionDetailsResource
+          .getListOfExecutionIdentifier(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, -1, 10, null)
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testExecutionIdAndStatusInvalidSizeEQ0() {
+    try {
+      executionDetailsResource
+          .getListOfExecutionIdentifier(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, 0, 0, null)
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testExecutionIdAndStatusInvalidPageGT1000() {
+    try {
+      executionDetailsResource
+          .getListOfExecutionIdentifier(
+              ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, 0, 10001, null)
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testExecutionIdAndStatusEmptyList() {
+    Pageable pageable = PageRequest.of(0, 10, Sort.by(Direction.DESC, PlanExecutionSummaryKeys.startTs));
+    Page<PipelineExecutionSummaryEntity> pipelineExecutionSummaryEntities =
+        new PageImpl<>(Collections.emptyList(), pageable, 0);
+
+    Criteria criteria = Criteria.where("a").is("b");
+    doReturn(criteria)
+        .when(pmsExecutionService)
+        .formCriteria(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, null, null, null, null,
+            ExecutionStatus.getListExecutionStatus(StatusUtils.finalStatuses()), false, false, true);
+
+    List<String> projections =
+        Arrays.asList(PlanExecutionSummaryKeys.planExecutionId, PlanExecutionSummaryKeys.runSequence,
+            PlanExecutionSummaryKeys.orgIdentifier, PlanExecutionSummaryKeys.pipelineIdentifier,
+            PlanExecutionSummaryKeys.projectIdentifier, PlanExecutionSummaryKeys.status);
+
+    doReturn(pipelineExecutionSummaryEntities)
+        .when(pmsExecutionService)
+        .getPipelineExecutionSummaryEntityWithProjection(criteria, pageable, projections);
+
+    Page<PipelineExecutionIdentifierSummaryDTO> content =
+        executionDetailsResource
+            .getListOfExecutionIdentifier(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, 0, 10, null)
+            .getData();
+    assertThat(content).isEmpty();
+    assertThat(content.getNumberOfElements()).isZero();
   }
 
   @Test
@@ -281,7 +445,161 @@ public class ExecutionDetailsResourceTest extends CategoryTest {
     PipelineExecutionSummaryDTO responseDTO = content.toList().get(0);
     assertThat(responseDTO.getPipelineIdentifier()).isEqualTo(PIPELINE_IDENTIFIER);
     assertThat(responseDTO.getPlanExecutionId()).isEqualTo(PLAN_EXECUTION_ID);
-    assertThat(responseDTO.getRunSequence()).isEqualTo(0);
+    assertThat(responseDTO.getRunSequence()).isZero();
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsForRemotePipelinesInvalidPage() {
+    try {
+      executionDetailsResource
+          .getListOfExecutionsWithOrOperator(
+              ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER_LIST, -1, 10, null, null)
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsForRemotePipelinesInvalidSizeEQ0() {
+    try {
+      executionDetailsResource
+          .getListOfExecutionsWithOrOperator(
+              ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER_LIST, 0, 0, null, null)
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsForRemotePipelinesInvalidSizeGT1000() {
+    try {
+      executionDetailsResource
+          .getListOfExecutionsWithOrOperator(
+              ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER_LIST, 0, 1001, null, null)
+          .getData();
+    } catch (InvalidRequestException invalidRequestException) {
+      assertEquals(invalidRequestException.getMessage(),
+          "Please Verify Executions list parameters for page and size, page should be >= 0 and size should be > 0 and <=1000");
+    }
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsWithOrOperator() {
+    Criteria criteria = Criteria.where("a").is("b");
+
+    Page<PipelineExecutionSummaryEntity> mockPage = mock(Page.class);
+    when(pmsExecutionService.formCriteriaOROperatorOnModules(any(), any(), any(), any(), any(), any()))
+        .thenReturn(criteria);
+    when(pmsExecutionService.getPipelineExecutionSummaryEntity(eq(criteria), any(Pageable.class))).thenReturn(mockPage);
+
+    Pageable pageRequest = PageRequest.of(0, 10, Sort.by(Direction.DESC, PlanExecutionSummaryKeys.startTs));
+    Page<PipelineExecutionSummaryDTO> planExecutionSummaryDTOS =
+        pmsExecutionService.getPipelineExecutionSummaryEntity(criteria, pageRequest)
+            .map(e
+                -> PipelineExecutionSummaryDtoMapper.toDto(e,
+                    e.getEntityGitDetails() != null
+                        ? e.getEntityGitDetails()
+                        : pmsGitSyncHelper.getEntityGitDetailsFromBytes(e.getGitSyncBranchContext())));
+
+    ResponseDTO<Page<PipelineExecutionSummaryDTO>> responseDTO = ResponseDTO.newResponse(planExecutionSummaryDTOS);
+    assertThat(responseDTO).isNotNull();
+    assertEquals("SUCCESS", responseDTO.getStatus().toString());
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetExecutionDetailV2() {
+    when(pmsExecutionService.getPipelineExecutionSummaryEntity(any(), any(), any(), any(), anyBoolean()))
+        .thenReturn(executionSummaryEntity);
+    when(pmsGitSyncHelper.getEntityGitDetailsFromBytes(any())).thenReturn(entityGitDetails);
+
+    PipelineExecutionDetailDTO pipelineExecutionDetailDTO = mock(PipelineExecutionDetailDTO.class);
+    when(executionHelper.getResponseDTO(any(), any(), any(), anyBoolean(), any(), any()))
+        .thenReturn(pipelineExecutionDetailDTO);
+
+    ResponseDTO<PipelineExecutionDetailDTO> responseDTO =
+        executionDetailsResource.getExecutionDetailV2(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, STAGE_NODE_ID,
+            STAGE_NODE_ID, CHILD_STAGE_NODE_ID, RENDER_FULL_BOTTOM_GRAPH, PLAN_EXECUTION_ID);
+
+    assertThat(responseDTO).isNotNull();
+    assertEquals("SUCCESS", responseDTO.getStatus().toString());
+    assertEquals(pipelineExecutionDetailDTO, responseDTO.getData());
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetExecutionSubGraphForNodeExecution() {
+    when(pmsExecutionService.getPipelineExecutionSummaryEntity(any(), any(), any(), any(), anyBoolean()))
+        .thenReturn(executionSummaryEntity);
+
+    NodeExecutionSubGraphResponse nodeExecutionSubGraphResponse = NodeExecutionSubGraphResponse.builder().build();
+    when(executionGraphService.getNodeExecutionSubGraph(any(), any())).thenReturn(nodeExecutionSubGraphResponse);
+
+    ResponseDTO<NodeExecutionSubGraphResponse> responseDTO =
+        executionDetailsResource.getExecutionSubGraphForNodeExecution(
+            ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, NODE_EXECUTION_ID, PLAN_EXECUTION_ID);
+
+    assertThat(responseDTO).isNotNull();
+    assertEquals("SUCCESS", responseDTO.getStatus().toString());
+    assertEquals(nodeExecutionSubGraphResponse, responseDTO.getData());
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetExpressionEvaluated() {
+    ExpressionEvaluationDetailDTO mockEvaluationDetailDTO = ExpressionEvaluationDetailDTO.builder().build();
+    when(expressionEvaluatorService.evaluateExpression(eq(PLAN_EXECUTION_ID), eq(YAML)))
+        .thenReturn(mockEvaluationDetailDTO);
+
+    ResponseDTO<ExpressionEvaluationDetailDTO> responseDTO = executionDetailsResource.getExpressionEvaluated(
+        ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER, PLAN_EXECUTION_ID, YAML);
+
+    assertThat(responseDTO).isNotNull();
+    assertEquals("SUCCESS", responseDTO.getStatus().toString());
+    assertEquals(mockEvaluationDetailDTO, responseDTO.getData());
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetListOfExecutionsForRemotePipelinesEmptyList() {
+    ByteString gitSyncBranchContext = ByteString.copyFromUtf8("random byte string");
+    doReturn(gitSyncBranchContext).when(pmsGitSyncHelper).getGitSyncBranchContextBytesThreadLocal();
+
+    Criteria criteria = Criteria.where("a").is("b");
+    doReturn(criteria)
+        .when(pmsExecutionService)
+        .formCriteriaOROperatorOnModules(
+            ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, PIPELINE_IDENTIFIER_LIST, null, null);
+
+    Pageable pageable = PageRequest.of(0, 10, Sort.by(Direction.DESC, PipelineExecutionSummaryKeys.startTs));
+    Page<PipelineExecutionSummaryEntity> pipelineExecutionSummaryEntities =
+        new PageImpl<>(Collections.emptyList(), pageable, 0);
+    doReturn(pipelineExecutionSummaryEntities)
+        .when(pmsExecutionService)
+        .getPipelineExecutionSummaryEntity(criteria, pageable);
+
+    Page<PipelineExecutionSummaryDTO> content = executionDetailsResource
+                                                    .getListOfExecutionsWithOrOperator(ACCOUNT_ID, ORG_IDENTIFIER,
+                                                        PROJ_IDENTIFIER, PIPELINE_IDENTIFIER_LIST, 0, 10, null, null)
+                                                    .getData();
+    assertThat(content).isEmpty();
+    assertThat(content.getNumberOfElements()).isZero();
   }
 
   @Test
@@ -304,9 +622,9 @@ public class ExecutionDetailsResourceTest extends CategoryTest {
         .isEqualTo(PIPELINE_IDENTIFIER);
     assertThat(executionDetails.getData().getPipelineExecutionSummary().getPlanExecutionId())
         .isEqualTo(PLAN_EXECUTION_ID);
-    assertThat(executionDetails.getData().getPipelineExecutionSummary().getRunSequence()).isEqualTo(0);
+    assertThat(executionDetails.getData().getPipelineExecutionSummary().getRunSequence()).isZero();
     assertThat(executionDetails.getData().getExecutionGraph().getRootNodeId()).isEqualTo(STAGE_NODE_ID);
-    assertThat(executionDetails.getData().getExecutionGraph().getNodeMap().size()).isEqualTo(0);
+    assertThat(executionDetails.getData().getExecutionGraph().getNodeMap().size()).isZero();
     assertThat(executionDetails.getData().getExecutionGraph().getRepresentationStrategy())
         .isEqualTo(RepresentationStrategy.CAMELCASE);
   }
@@ -324,6 +642,82 @@ public class ExecutionDetailsResourceTest extends CategoryTest {
                            -> executionDetailsResource.getExecutionDetail(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER,
                                STAGE_NODE_ID, null, invalidPlanExecutionId))
         .isInstanceOf(InvalidRequestException.class);
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetExecutions() {
+    ExecutionDataResponseDTO mockExecutionDataResponseDTO = ExecutionDataResponseDTO.builder().build();
+    when(pmsExecutionService.getExecutionData(eq(PLAN_EXECUTION_ID))).thenReturn(mockExecutionDataResponseDTO);
+
+    ResponseDTO<ExecutionDataResponseDTO> responseDTO =
+        executionDetailsResource.getExecutions(ACCOUNT_ID, PLAN_EXECUTION_ID);
+
+    assertThat(responseDTO).isNotNull();
+    assertEquals("SUCCESS", responseDTO.getStatus().toString());
+    assertEquals(mockExecutionDataResponseDTO, responseDTO.getData());
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetExecutionsDetails() {
+    ExecutionMetaDataResponseDetailsDTO mockExecutionMetaDataResponseDetailsDTO =
+        ExecutionMetaDataResponseDetailsDTO.builder().build();
+    when(pmsExecutionService.getExecutionDataDetails(eq(PLAN_EXECUTION_ID)))
+        .thenReturn(mockExecutionMetaDataResponseDetailsDTO);
+
+    ResponseDTO<ExecutionMetaDataResponseDetailsDTO> responseDTO =
+        executionDetailsResource.getExecutionsDetails(ACCOUNT_ID, PLAN_EXECUTION_ID);
+
+    assertThat(responseDTO).isNotNull();
+    assertEquals("SUCCESS", responseDTO.getStatus().toString());
+    assertEquals(mockExecutionMetaDataResponseDetailsDTO, responseDTO.getData());
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetInputsetYaml() {
+    boolean resolveExpressions = false;
+    String inputSetYaml = "inputSetYaml";
+
+    InputSetYamlWithTemplateDTO inputSetYamlWithTemplateDTO =
+        InputSetYamlWithTemplateDTO.builder().inputSetYaml(inputSetYaml).build();
+    when(
+        pmsExecutionService.getInputSetYamlWithTemplate(eq(ACCOUNT_ID), eq(ORG_IDENTIFIER), eq(PROJ_IDENTIFIER),
+            eq(PLAN_EXECUTION_ID), eq(false), eq(resolveExpressions), eq(ResolveInputYamlType.RESOLVE_ALL_EXPRESSIONS)))
+        .thenReturn(inputSetYamlWithTemplateDTO);
+
+    String result = executionDetailsResource.getInputsetYaml(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER,
+        resolveExpressions, ResolveInputYamlType.RESOLVE_ALL_EXPRESSIONS, PLAN_EXECUTION_ID);
+
+    assertThat(result).isNotNull();
+    assertEquals(inputSetYaml, result);
+  }
+
+  @Test
+  @Owner(developers = SANDESH_SALUNKHE)
+  @Category(UnitTests.class)
+  public void testGetInputsetYamlV2() {
+    boolean resolveExpressions = false;
+    String inputSetYaml = "inputSetYaml";
+
+    InputSetYamlWithTemplateDTO inputSetYamlWithTemplateDTO =
+        InputSetYamlWithTemplateDTO.builder().inputSetYaml(inputSetYaml).build();
+    when(
+        pmsExecutionService.getInputSetYamlWithTemplate(eq(ACCOUNT_ID), eq(ORG_IDENTIFIER), eq(PROJ_IDENTIFIER),
+            eq(PLAN_EXECUTION_ID), eq(false), eq(resolveExpressions), eq(ResolveInputYamlType.RESOLVE_ALL_EXPRESSIONS)))
+        .thenReturn(inputSetYamlWithTemplateDTO);
+
+    ResponseDTO<InputSetYamlWithTemplateDTO> response =
+        executionDetailsResource.getInputsetYamlV2(ACCOUNT_ID, ORG_IDENTIFIER, PROJ_IDENTIFIER, resolveExpressions,
+            ResolveInputYamlType.RESOLVE_ALL_EXPRESSIONS, PLAN_EXECUTION_ID);
+
+    assertThat(response).isNotNull();
+    assertEquals("SUCCESS", response.getStatus().toString());
+    assertEquals(inputSetYamlWithTemplateDTO, response.getData());
   }
 
   @Test
